# ebike

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml  log4rs.yaml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/config/: def.rs  mod.rs  util.rs
src/core/: core_def.rs  core_util.rs  execution.rs  global_context.rs  logical_plan.rs  mod.rs  output.rs  session_context.rs  stmt_context.rs  udf.rs
src/datafusion_impl/: mod.rs
src/datafusion_impl/catalog/: information_schema.rs  mod.rs
src/datafusion_impl/datasource/: mod.rs  rocksdb.rs  sled.rs
src/datafusion_impl/optimizer/: mod.rs  predicate_push_down.rs
src/datafusion_impl/physical_plan/: mod.rs  rocksdb.rs  sled.rs
src/execute/: delete_record.rs  drop_column.rs  mod.rs  select_from.rs
src/execute_impl/: add_column.rs  com_field_list.rs  com_stmt_prepare.rs  create_db.rs  create_table.rs  delete.rs  delete_from.rs  drop_column.rs  drop_schema.rs  drop_table.rs  explain.rs  insert.rs  mod.rs  select.rs  select_from.rs  set_default_schema.rs  set_variable.rs  show_charset.rs  show_collation.rs  show_columns_from_table.rs  show_create_table.rs  show_databases.rs  show_engines.rs  show_grants.rs  show_privileges.rs  show_table_status.rs  show_tables.rs  show_variables.rs  update.rs  update_record.rs  update_set.rs
src/logical_plan/: insert.rs
src/meta/: cache.rs  data.rs  def.rs  initial.rs  meta_const.rs  meta_def.rs  meta_util.rs  mod.rs  read.rs  scalar_value.rs  variable.rs
src/meta/def/: information_schema.rs  mod.rs  mysql.rs  performance_schema.rs
src/meta/initial/: information_schema.rs  initial_util.rs  mod.rs  mysql.rs  performance_schema.rs
src/mysql/: command.rs  error.rs  handle.rs  message.rs  metadata.rs  mod.rs  mysql_error_code.rs  mysql_type_code.rs  mysql_util.rs  packet.rs  request.rs  response.rs  statement.rs
src/physical_plan/: alter_table.rs  com_field_list.rs  create_db.rs  create_table.rs  delete.rs  drop_db.rs  drop_table.rs  insert.rs  mod.rs  select.rs  set_default_schema.rs  set_variable.rs  show_charset.rs  show_collation.rs  show_columns_from.rs  show_create_table.rs  show_engines.rs  show_grants.rs  show_privileges.rs  update.rs  util.rs
src/store/: mod.rs
src/store/engine/: engine_util.rs  mod.rs  parquet.rs  rocksdb.rs  sled.rs
src/store/reader/: mod.rs  reader_util.rs  rocksdb.rs  sled.rs  sled2.rs
src/store/rocksdb/: column_family.rs  compaction_filter.rs  comparator.rs  db.rs  dbpath.rs  error.rs  ffi_util.rs  iterator.rs  merge_operator.rs  mod.rs  option.rs  slice_transform.rs
src/test/: base_sql.rs  mod.rs  rocksdb.rs  sled.rs  test_util.rs  util.rs
src/util/: convert.rs  dbkey.rs  mod.rs
src/variable/: mod.rs  system.rs  user_defined.rs
