[package]
name = "sparrow"
version = "1.2.3"
description = "Fast, lightweight and schema-less search backend."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
homepage = "https://github.com/valeriansaliou/sonic"
repository = "https://github.com/valeriansaliou/sonic.git"
keywords = ["search", "query", "server", "index"]
categories = ["database-implementations", "web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>", "Baptiste Jamin <baptistejamin@gmail.com>"]

[lib]
name = "sparrow"
path = "src/lib.rs"

[[bin]]
name = "sparrow-server"
path = "src/main.rs"
doc = false

[dependencies]
bstr = "0.2.12"
bytes = "0.5.0"
csv = "1.1"
fnv = "1.0.3"
tempdir = "0.3.7"
lazy_static = "1.4.0"
crossbeam = "0.7.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
bitflags = "1"
rand = "0.5"
lexical = "5.2"
log = "0.4.8"
log4rs = "0.10.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
env_logger = "0.3"
byteorder = "1.2.7"
#sqlparser = { git = "https://github.com/ballista-compute/sqlparser-rs", branch = "main" }
sqlparser = { path = "components/sqlparser-rs" }
#sqlparser = "0.9.0"
sled = { version = "0.34" }
#rocksdb = { path = "components/rust-rocksdb" }
datafusion = { path = "components/arrow-datafusion/datafusion" }
#arrow = { path = "components/arrow-rs/arrow" }
#arrow = { git = "https://github.com/apache/arrow-rs", rev = "4449ee96fe3fd4a0b275da8dd25ce2792699bc98", features = ["prettyprint"] }
#parquet = { path = "components/arrow-rs/parquet" }
arrow = { version = "5.0", features = ["prettyprint"] }
parquet = { version = "5.0", features = ["arrow"] }
libc = "0.2"
packed_simd = { version = "0.3.1", optional = true }
hex = "0.4"
num = "0.2"
flatbuffers = "0.6.0"
indexmap = "1.0"
#proc-macro2 = "=1.0.18"
async-trait = "0.1.41"
serde = { version = "=1.0.118", features = ["rc"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
confy = "0.4.0"
clap = { version = "2.33", default-features = false }
toml = "0.5"


