[package]
name = "ebike"
version = "0.1.1"
description = "Fast, lightweight and schema-less database backend."
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
homepage = "https://github.com/wqc200/ebike"
repository = "https://github.com/wqc200/ebike.git"
keywords = ["olap", "database", "rust", "cell"]
categories = ["database-implementations", "web-programming"]
authors = ["Craftsmen Soft"]

[lib]
name = "ebike"
path = "src/lib.rs"

[[bin]]
name = "ebike-server"
path = "src/main.rs"
doc = false

[dependencies]
bstr = "0.2.12"
bytes = "0.5.0"
fnv = "1.0.3"
tempdir = "0.3.7"
lazy_static = "1.4.0"
crossbeam = "0.7.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
bitflags = "1"
rand = "0.5"
lexical = "5.2"
log = "0.4.8"
log4rs = "0.10.0"
tokio = { version = "1.11.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = "0.3"
env_logger = "0.3"
byteorder = "1.2.7"
sqlparser = { path = "components/sqlparser-rs" }
sled = { version = "0.34" }
datafusion = { path = "components/arrow-datafusion/datafusion" }
arrow = { version = "6.1.0", features = ["prettyprint"] }
parquet = { version = "6.1.0", features = ["arrow"] }
libc = "0.2"
packed_simd = { version = "0.3.1", optional = true }
hex = "0.4"
num = "0.2"
flatbuffers = "0.6.0"
indexmap = "1.0"
async-trait = "0.1.41"
serde_derive = "=1.0.118"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "2.33", default-features = false }
toml = "0.5"
